--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,7 +149,12 @@ h3{
 
 footer{
     padding: 20px;
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:20px;
     background-color: var( --color-gold );
 }
 
